--- a/src/app/home/includes/header/header.component.css
+++ b/src/app/home/includes/header/header.component.css
@@ -52,7 +52,7 @@
 }
 
 .bg-light-navbar-logo {
-  background: #ffc106 !important;
+  /* background: #ffc106 !important; */
 }
 
 .bg-light-navbar-green{
