--- a/src/app/home/master-report/master-sale-report/master-sale-report.component.css
+++ b/src/app/home/master-report/master-sale-report/master-sale-report.component.css
@@ -69,3 +69,10 @@ tbody > tr > td{
 .padding-bot-input{
   padding-bottom: 8px !important;
 }
+
+.sale-info {
+  background-color: #5f9ea0a8;
+}
+.sale-item-info {
+  background-color: #a9a9a9a6;
+}
