--- a/src/styles.css
+++ b/src/styles.css
@@ -7907,7 +7907,7 @@ a,button,.btn{
 .app-header__logo .logo-src{
   height: 40px;
   width: 195px;
-  background:url(assets/images/smart_pharmacy.png)
+  background:url(assets/images/logo3.png)
 }
 .app-header__menu,.app-header__mobile-menu{
   display:none;
