--- a/src/app/home/includes/header/header.component.html
+++ b/src/app/home/includes/header/header.component.html
@@ -119,10 +119,10 @@
                 <a routerLink="/master-report/purchase-due" class="nav-link"><i class="fa fa-caret-right"></i> Purchase
                   Due Report </a>
               </li>
-              <li class="nav-item">
+              <!-- <li class="nav-item">
                 <a routerLink="/master-report/expiry-medicine" class="nav-link"><i class="fa fa-caret-right"></i> Expiry
                   Medicine </a>
-              </li>
+              </li> -->
               <!-- <li class="nav-item">
                 <a routerLink="/master-report/purchase-return" class="nav-link"><i class="fa fa-caret-right"></i> Purchase Return Report </a>
               </li> -->
