--- a/src/app/home/master-report/master-sale-report/master-sale-report.component.html
+++ b/src/app/home/master-report/master-sale-report/master-sale-report.component.html
@@ -12,10 +12,10 @@
     </div>
     <div class="card-body">
       <div class="row sale-filter-form-background">
-        <div class="col-md-2 padding-bot-input">
+        <!-- <div class="col-md-2 padding-bot-input">
           <input id="typeahead-company" name="company" [(ngModel)]="filterItem.company"
             [ngbTypeahead]="company_search" placeholder="Company" type="text" class="form-control">
-        </div>
+        </div> -->
         <div class="col-md-2 padding-bot-input">
           <div id="scrollable-dropdown-menu">
             <input placeholder="Product" #cartMedicine id="typeahead-medicine" name="search"
@@ -29,9 +29,9 @@
             <option *ngFor="let type of types" value="{{ type.id }}">{{ type.name }}</option>
           </select>
         </div>
-        <div class="col-md-2 padding-bot-input">
+        <!-- <div class="col-md-2 padding-bot-input">
           <input id="typeahead-basic" name="generic" [(ngModel)]="filterItem.generic" placeholder="Generic" type="text" [ngbTypeahead]="generic_search" class="form-control">
-        </div>
+        </div> -->
         <div class="col-md-2 padding-bot-input">
           <input type="text" name="invoice" [(ngModel)]="filterItem.invoice" placeholder="Invoice"
             class="form-control" />
@@ -71,13 +71,13 @@
         </div>
         <div class="col-lg-2 padding-bot-input">
           <select name="payment_type" [(ngModel)]="filterItem.payment_type" class="form-control">
-            <option value=""> - Select -</option>
+            <option value=""> - Payment Type -</option>
             <option *ngFor="let item of paymentTypes" value="{{ item.name }}">{{ item.name }}</option>
           </select>
         </div>
         <div class="col-lg-2 padding-bot-input">
           <select class="ace form-control" name="sales_man" [(ngModel)]="filterItem.sales_man">
-            <option value="0">Select Sales Person</option>
+            <option value="0">- Sales Person -</option>
             <option *ngFor="let person of salesPersonList" value="{{ person.id }}">{{ person.name }}
               ({{ person.email }})</option>
           </select>
@@ -132,24 +132,27 @@
           <table class="mb-0 table table-bordered" *ngIf="!customLoader" style="font-size: 12px;">
             <thead>
               <tr>
-                <th>SL#</th>
-                <th>Sales Invoice</th>
-                <th>Sales Date</th>
-                <th>Medicine/Product Details</th>
-                <th>Sale Qty (Pcs)</th>
-                <th>TP+VAT/Unit</th>
-                <th>MRP/Unit</th>
-                <th>Total T+V</th>
-                <th>Total MRP</th>
-                <th>Profit</th>
-                <th>Total Profit</th>
-                <th>Total Amount</th>
-                <th>Total Discount</th>
-                <th>Grand Total</th>
-                <th>Total Due</th>
-                <th>Customer Details</th>
-                <th>Payment Type</th>
-                <th>Sales Man</th>
+                <td rowspan="2">SL#</td>
+                <td rowspan="2">Sales Invoice</td>
+                <td rowspan="2">Sales Date</td>
+                <td colspan="7" class="text-center">SALE ITEMS</td>
+                <td rowspan="2">Total Profit</td>
+                <td rowspan="2">Total Amount</td>
+                <td rowspan="2">Total Discount</td>
+                <td rowspan="2">Grand Total</td>
+                <td rowspan="2">Total Due</td>
+                <td rowspan="2">Customer</td>
+                <td rowspan="2">Payment</td>
+                <td rowspan="2">Sales Man</td>
+              </tr>
+              <tr>
+                <td>Product</td>
+                <td>Qty</td>
+                <td>TP</td>
+                <td>MRP</td>
+                <td>Subtotal(TP)</td>
+                <td>Subtotal(MRP)</td>
+                <td>Profit</td>
               </tr>
             </thead>
             <tbody>
@@ -160,34 +163,32 @@
                 <ng-container *ngFor="let product of item.item; let j='index' ;">
                   <tr>
                     <ng-container *ngIf="j==0">
-                      <td [attr.rowspan]="item.item.length">{{ i+1 }}</td>
-                      <td [attr.rowspan]="item.item.length">{{ item.invoice }}</td>
-                      <td [attr.rowspan]="item.item.length">{{ item.sale_date | date: 'dd/MM/yyyy' }}</td>
+                      <td class="sale-info" [attr.rowspan]="item.item.length">{{ i+1 }}</td>
+                      <td class="sale-info" [attr.rowspan]="item.item.length">{{ item.invoice }}</td>
+                      <td class="sale-info" [attr.rowspan]="item.item.length">{{ item.sale_date | date: 'dd/MM/yyyy' }}</td>
                     </ng-container>
                     <ng-container>
-                      <td>
+                      <td class="sale-item-info">
                         {{ product.medicine.type }}.&nbsp;{{ product.medicine.name }}
                         <br>
-                        {{ product.medicine.strength }}
-                        <br>
-                        {{ product.medicine.company }}
+                        {{ product.medicine.brand }}
                       </td>
-                      <td>{{ product.quantity }}</td>
-                      <td>{{ product.tp | number: "1.2-2" }}</td>
-                      <td>{{ product.mrp | number: "1.2-2" }}</td>
-                      <td>{{ product.sub_tp | number: "1.2-2" }}</td>
-                      <td>{{ product.sub_total | number: "1.2-2" }}</td>
-                      <td>{{ product.profit | number: "1.2-2" }}</td>
+                      <td class="sale-item-info">{{ product.quantity }}</td>
+                      <td class="sale-item-info">{{ product.tp | number: "1.2-2" }}</td>
+                      <td class="sale-item-info">{{ product.mrp | number: "1.2-2" }}</td>
+                      <td class="sale-item-info">{{ product.sub_tp | number: "1.2-2" }}</td>
+                      <td class="sale-item-info">{{ product.sub_total | number: "1.2-2" }}</td>
+                      <td class="sale-item-info">{{ product.profit | number: "1.2-2" }}</td>
                     </ng-container>
                     <ng-container *ngIf="j==0">
-                      <td [attr.rowspan]="item.item.length">{{ item.total_profit | number: "1.2-2" }}</td>
-                      <td [attr.rowspan]="item.item.length">{{ item.sale_amount | number: "1.2-2" }}</td>
-                      <td [attr.rowspan]="item.item.length">{{ item.sale_discount | number: "1.2-2" }}</td>
-                      <td [attr.rowspan]="item.item.length">{{ item.grand_total | number: "1.2-2" }}</td>
-                      <td [attr.rowspan]="item.item.length">{{ item.sale_due | number: "1.2-2" }}</td>
-                      <td [attr.rowspan]="item.item.length">{{ item.customer.name }} <br> {{ item.customer.mobile }}
-                      <td [attr.rowspan]="item.item.length">{{ item.payment_type }} </td>
-                      <td [attr.rowspan]="item.item.length">{{ item.sales_man }}</td>
+                      <td class="sale-info" [attr.rowspan]="item.item.length">{{ item.total_profit | number: "1.2-2" }}</td>
+                      <td class="sale-info" [attr.rowspan]="item.item.length">{{ item.sale_amount | number: "1.2-2" }}</td>
+                      <td class="sale-info" [attr.rowspan]="item.item.length">{{ item.sale_discount | number: "1.2-2" }}</td>
+                      <td class="sale-info" [attr.rowspan]="item.item.length">{{ item.grand_total | number: "1.2-2" }}</td>
+                      <td class="sale-info" [attr.rowspan]="item.item.length">{{ item.sale_due | number: "1.2-2" }}</td>
+                      <td class="sale-info" [attr.rowspan]="item.item.length">{{ item.customer.name }} <br> {{ item.customer.mobile }}
+                      <td class="sale-info" [attr.rowspan]="item.item.length">{{ item.payment_type }} </td>
+                      <td class="sale-info" [attr.rowspan]="item.item.length">{{ item.sales_man }}</td>
                     </ng-container>
                   </tr>
                 </ng-container>
