--- a/src/app/home/purchase-due/purchase-due.component.html
+++ b/src/app/home/purchase-due/purchase-due.component.html
@@ -20,11 +20,10 @@
               <tr>
                   <th>#</th>
                   <th>Invoice</th>
-                  <th>Company</th>
-                  <th>Company Invoice</th>
+                  <th>Supplier</th>
+                  <th>Supplier Invoice</th>
                   <th>Purchase Date</th>
                   <th>Total</th>
-                  <th>VAT</th>
                   <th>Discount</th>
                   <th>Net Payable</th>
                   <th>Advance</th>
@@ -40,14 +39,6 @@
                   <td>{{ item.company_invoice }}</td>
                   <td>{{ item.purchase_date }}</td>
                   <td>{{ item.total_amount }}</td>
-                  <td>
-                    <div *ngIf="item.vat_type==='percentage'">
-                        {{ (item.total_amount*item.vat)/100 }} <span class="small">({{ item.vat }} %)</span>
-                    </div>
-                    <div *ngIf="item.vat_type==='fixed'">
-                        {{ (item.vat) }} <span class="small">({{ item.vat }} Tk.)</span>
-                    </div>
-                  </td>
                   <td>{{ item.discount }}</td>
                   <td>{{ item.total_payble_amount }}</td>
                   <td>{{ item.total_advance_amount }}</td>
@@ -82,15 +73,13 @@
                   <thead>
                     <tr>
                       <th class="sl">Sl</th>
-                      <th style="text-align: left;">MEDICINE</th>
-                      <th>QTY (PCS)</th>
-                      <th>EXP. DATE</th>
-                      <th>BATCH NO</th>
+                      <th style="text-align: left;">PRODUCT</th>
+                      <th>BRAND</th>
+                      <th>QTY</th>
                       <th>UNIT PRICE (Tk.)</th>
                       <th>TOTAL (Tk.)</th>
-                      <th>PIECE/BOX</th>
-                      <th>M.R.P. (Tk.) <br>BOX</th>
-                      <th>T.P. (Tk.) <br>BOX</th>
+                      <th>CPU (Tk.) <br></th>
+                      <th>RPU (Tk.) <br></th>
                     </tr>
                   </thead>
                   <tbody>
@@ -98,16 +87,14 @@
                       <td>{{ i+1 }}</td>
                       <td style="text-align: left;">
                         {{ item.medicine_type | slice:0:3 }}. {{ item.medicine_name }}<br/>
-                        <span class="small">{{ item.generic }}<br/>{{ item.company_name }}</span>
+                        <span class="small">{{ item.generic }}</span>
                       </td>
-                      <td>{{ item.quantity*item.pieces_per_box }}</td>
-                      <td>{{ item.exp_date }}</td>
-                      <td>{{ item.batch_no }}</td>
+                      <td>{{ item.brand }}</td>
+                      <td>{{ item.quantity }}</td>
                       <td>{{ item.unit_price }}</td>
                       <td>{{ item.total }}</td>
-                      <td>{{ item.pieces_per_box }}</td>
-                      <td>{{ item.mrp }}</td>
                       <td>{{ item.trade_price }}</td>
+                      <td>{{ item.mrp }}</td>
                     </tr>
                   </tbody>
                 </table>
