--- a/src/app/home/purchase-list/purchase-list-filter/purchase-list-filter.component.html
+++ b/src/app/home/purchase-list/purchase-list-filter/purchase-list-filter.component.html
@@ -9,7 +9,7 @@
             class="form-control"
             name="company_invoice"
             [(ngModel)]="saleData.company_invoice"
-            placeholder="Company Invoice"
+            placeholder="Supplier Invoice"
           />
         </div>
         <div class="form-group mx-sm-3 mb-2">
@@ -23,9 +23,9 @@
           />
         </div>
         <div class="form-group mx-sm-3 mb-2">
-          <label for="inputPassword2" class="sr-only">Customer Mobile</label>
+          <label for="inputPassword2" class="sr-only">Supplier</label>
           <input name="company" id="typeahead-basic" name="company" [(ngModel)]="saleData.company"
-            [ngbTypeahead]="company_search" placeholder="Company" type="text" class="form-control">
+            [ngbTypeahead]="company_search" placeholder="Supplier" type="text" class="form-control">
         </div>
         <div class="form-group mx-sm-3 mb-2">
           <label for="inputPassword2" class="sr-only">Date Range</label>
