--- a/src/app/home/sale/sale-list/sale-list.component.html
+++ b/src/app/home/sale/sale-list/sale-list.component.html
@@ -122,7 +122,7 @@
           <tbody style="font-size: 11px!important;">
             <tr *ngFor=" let item of orderDetails?.order_items; let i = index;">
               <td>
-                 {{ i + 1 }}. {{ item.medicine_type |  substr3}}. {{ item.medicine | trimStr2 }} ({{ item.medicine_power }})
+                 {{ i + 1 }}. {{ item.medicine_type |  substr3}}. {{ item.medicine | trimStr2 }} ({{ item.brand }})
               </td>
               <td>
                 {{ item.quantity }}
@@ -248,7 +248,7 @@
           <tbody style="font-size: 12px!important;">
             <tr *ngFor=" let item of orderDetails?.order_items;">
               <td>
-                {{ item.medicine_type |  substr3}}. {{ item.medicine | trimStr2 }} ({{ item.medicine_power }})
+                {{ item.medicine_type |  substr3}}. {{ item.medicine | trimStr2 }} ({{ item.brand }})
               </td>
               <td>
                 {{ item.quantity }}
@@ -379,7 +379,7 @@
                 ">
               <tr class="service">
                 <td class="tableitem">
-                  <p class="itemtext">{{ item.medicine }} ({{ item.medicine_power }}
+                  <p class="itemtext">{{ item.medicine }} ({{ item.brand }}
                     {{ item.medicine_type }})</p>
                 </td>
                 <td class="tableitem">
@@ -521,7 +521,7 @@
               <tr>
                 <td class="sl">{{ i + 1 }}</td>
                 <td style="text-align: left">
-                  {{ item.medicine }} ({{ item.medicine_power }},
+                  {{ item.medicine }} ({{ item.brand }},
                   {{ item.medicine_type }}), : {{ item.quantity }}&nbsp;{{
                     item.unit_type
                   }}
@@ -616,7 +616,7 @@
               <tr>
                 <td class="unit">{{ i + 1 }}</td>
                 <td class="service" style="text-align: left">
-                  {{ item.medicine }} ({{ item.medicine_power }}
+                  {{ item.medicine }} ({{ item.brand }}
                   {{ item.medicine_type }})
                 </td>
                 <td class="qty">{{ item.quantity }}</td>
